ProgramacionPrimerCuatri/workspace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:44:07 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
..\src\clase_08.c: In function 'myStrCpy':
..\src\clase_08.c:78:24: error: expected ';' before '}' token
   78 |   *cadenaUno=*cadenaDos
      |                        ^
      |                        ;
   79 | 
   80 |  }
      |  ~                      
21:44:15 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
21:44:45 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
21:49:00 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
..\src\clase_08.c: In function 'myStrCpy':
..\src\clase_08.c:76:6: warning: 'aux' is used uninitialized in this function [-Wuninitialized]
   76 |  *aux=*cadenaUno;
      |  ~~~~^~~~~~~~~~~
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
21:53:24 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
21:53:48 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
21:55:50 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
21:56:07 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
21:56:18 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
21:56:46 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
21:59:18 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
21:59:31 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
21:59:49 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
22:01:19 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
..\src\clase_08.c: In function 'myStrCpy':
..\src\clase_08.c:76:2: error: expected ',' or ';' before 'for'
   76 |  for(int i=0;i<len;i++)
      |  ^~~
..\src\clase_08.c:76:14: error: 'i' undeclared (first use in this function)
   76 |  for(int i=0;i<len;i++)
      |              ^
..\src\clase_08.c:76:14: note: each undeclared identifier is reported only once for each function it appears in
..\src\clase_08.c:76:23: error: expected ';' before ')' token
   76 |  for(int i=0;i<len;i++)
      |                       ^
      |                       ;
..\src\clase_08.c:76:23: error: expected statement before ')' token
22:01:31 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
22:05:02 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
22:05:59 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
22:10:31 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\funciones.o" "..\\src\\funciones.c" 
..\src\funciones.c: In function 'getChar':
..\src\funciones.c:14:13: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'char **' [-Wformat=]
   14 |     scanf("%s",&auxiliarChar);
      |            ~^  ~~~~~~~~~~~~~
      |             |  |
      |             |  char **
      |             char *
..\src\funciones.c:15:12: warning: returning 'char *' from a function with return type 'char' makes integer from pointer without a cast [-Wint-conversion]
   15 |     return auxiliarChar;
      |            ^~~~~~~~~~~~
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
22:12:28 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
Info: Nothing to build for clase_08
22:13:35 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
22:13:54 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
22:14:07 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
22:14:18 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
22:14:47 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
22:14:57 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
22:16:00 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
Info: Nothing to build for clase_08
22:17:24 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
22:17:41 **** Incremental Build of configuration Debug for project clase_08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_08.o" "..\\src\\clase_08.c" 
gcc -o clase_08.exe "src\\clase_08.o" "src\\funciones.o" 
